--- a/feature-selection-thesis/pom.xml
+++ b/feature-selection-thesis/pom.xml
@@ -11,5 +11,15 @@
       <artifactId>spark-core_2.10</artifactId>
       <version>1.6.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-mllib_2.11</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jblas</groupId>
+      <artifactId>jblas</artifactId>
+      <version>1.2.4</version>
+    </dependency>
   </dependencies>
 </project>
