--- a/feature-selection-thesis/pom.xml
+++ b/feature-selection-thesis/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>jblas</artifactId>
       <version>1.2.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-storage</artifactId>
+      <version>v1-rev65-1.21.0</version>
+    </dependency>
   </dependencies>
 
   <build>
